# phishing-analysis-detection

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
phishguard/: cli.py  indicators.py  parser_eml.py  report.py  scoring.py  utils.py
samples/: README.md  benign.eml  benign_url.txt  suspicious.eml  suspicious_url.txt
src/phishing_detector/: __init__.py  analyzer.py  main.py  port_scanner.py
tests/: test_analyzer.py  test_indicators.py  test_scoring.py
