[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phishguard"
version = "1.0.0"
description = "Phishing email triage tool: parses .eml, extracts IOCs, scores risk, outputs reports."
requires-python = ">=3.10"
dependencies = ["rich>=13.0.0"]

[project.scripts]
phishguard = "phishguard.cli:main"
